--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.986803572069-qjkc7iepss280ei6mh2tjf3so6tgtoga</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCrf6XIXO8JQdlf-jyxjYhVSFls9vHK9Bc</string>
+	<string>PUT-HERE-API-KEY</string>
 	<key>GCM_SENDER_ID</key>
 	<string>986803572069</string>
 	<key>PLIST_VERSION</key>
